
syntax = "proto3";

package hello;
option go_package = "protogen/go/hello";

// Hello World

message HelloRequest {
  string name = 1;
  string language = 20;
}

message HelloResponse {
  string greet = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {};
}


